--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "telegram-bot-typescript",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "author": {
     "email": "slava+npm@knyazev.io",
@@ -9,8 +9,10 @@
     "url": "https://github.com/vezaynk/telegram-bot-typescript"
   },
   "exports": {
-    "types": "./dist/TelegramBotBindings.d.ts"
+    "types": "./dist/TelegramBotBindings.d.ts",
+    "default": "./dist/TelegramBotBindings.d.ts"
   },
+  "main": "./dist/TelegramBotBindings.d.ts",
   "scripts": {
     "start": "tsx ./src/codegen.ts"
   },
